<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <View
        android:id="@+id/backView"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backView">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toStartOf="@+id/yearTextView"
            android:layout_toLeftOf="@+id/yearTextView"
            android:text="@string/name"
            android:textColor="@color/colorDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/episodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="end"
            android:text="@string/episode"
            android:textAlignment="textEnd"
            android:textColor="@color/colorDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/ic_rating"
            android:gravity="center"
            android:text="@string/year"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/episodeTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:text="@string/genre"
            android:textAlignment="textStart"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/genreTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/description"
            android:textColor="@color/colorDark"
            android:textSize="16sp" />


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="32dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/animeImageView"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:contentDescription="@string/all"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/dragonballsuper" />

        <ImageView
            android:id="@+id/shadowImageView"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:contentDescription="@string/all"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_squere"
            tools:ignore="VectorDrawableCompat" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>