<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".30"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/view_bg">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/name_name"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtEmail1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/txtEmail"
            android:inputType="textWebEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNombre"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtPass1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/txtPass"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtEmail1"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TouchTargetSizeCheck" />


        <Button
            android:id="@+id/btn_registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/btn_login"
            android:text="Registrar"
            android:textColor="@color/coloWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPass1"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:text="¿Ya tienes una cuenta?"
            android:textColor="#000000"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/txtPass1"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPass1"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_Google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/coloWhite"
            android:elevation="35dp"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_registro" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_Mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/coloWhite"
            android:elevation="35dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_registro"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_Google" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_Facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/coloWhite"
            android:elevation="35dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_registro"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_Google"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>